--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,10 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto);
 
 /****** LOGIN MODAL ******/
+.container {
+  height: 500px;
+}
+
 .loginmodal-container {
   padding: 30px;
   max-width: 350px;
@@ -11,6 +15,7 @@
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   font-family: roboto;
+
 }
 
 .loginmodal-container h1 {
