--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="loginmodal-container">
@@ -18,5 +19,6 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 <router-outlet></router-outlet>
