--- a/src/app/meetingList/meetingList.component.html
+++ b/src/app/meetingList/meetingList.component.html
@@ -14,19 +14,25 @@
                 <th class="col-md-2">
                   <span>Meeting</span>
                 </th>
-                <th class="col-md-3">
+                <th class="col-md-2">
                   <span>Agenda</span>
                 </th>
-                <th class="col-md-3">
+                <th class="col-md-2">
                   <span>Attendees</span>
                 </th>
                 <th class="col-md-1">
+                  <span>Status</span>
+                </th>
+                <th class="col-md-2">
                   <span>Date</span>
                 </th>
                 <th class="col-md-3">
                   <span>
+                    <button type="button" id="check" value="Check All Rows" class="btn btn-default btn-lg" (click)="checkAll()">
+                      <span class="glyphicon glyphicon-check glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Select/Deselect All Rows"></span>
+                    </button>
                     <button type="button" class="btn btn-danger btn-lg toDelete" (click)="toDelete()">
-                      <span class="glyphicon glyphicon-trash" aria-hidden="true" data-toggle="tooltip" title="Click to Delete"></span>
+                      <span class="glyphicon glyphicon-trash glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Delete"></span>
                   </button>
                   </span>
                 </th>
@@ -34,32 +40,36 @@
             </thead>
             <tbody>
               <tr *ngFor="let meeting of meetingList">
-                <td>
-                   <a href="" routerLink="/meeting" routerLinkActive="active" (click)="edit(meeting.meetingId)" >{{meeting.meetingTitle}}</a>
+                <td class="col-md-2 td">
+                  <span *ngIf="meeting.status != 'Open'">{{meeting.meetingTitle}}</span>
+                   <a *ngIf="meeting.status == 'Open'" href="" routerLink="/meeting" routerLinkActive="active" (click)="edit(meeting.meetingId)" >{{meeting.meetingTitle}}</a>
                 </td>
-                <td>
+                <td class="col-md-2 td">
                   {{meeting.meetingAgenda}}
                 </td>
-                <td>
+                <td class="col-md-2 td">
                   {{meeting.meetingAttendees}}
                 </td>
-                <td>
+                <td class="col-md-1">
+                  {{meeting.status}}
+                </td>
+                <td class="col-md-2">
                   {{meeting.meetingDate}}
                 </td>
-                <td>
-                  <button type="button" class="btn btn-default btn-md addButton" (click)="openActionDiscussionForm(meeting.meetingId)">
-                      <span class="glyphicon glyphicon-edit" aria-hidden="true" data-toggle="tooltip" title="Click to Open ActionDiscussion Form"></span>
+                <td class="col-md-3">
+                  <button *ngIf="meeting.status == 'Open'" type="button" class="btn btn-default btn-lg addButton" (click)="openActionDiscussionForm(meeting.meetingId)">
+                      <span class="glyphicon glyphicon-edit glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Open ActionDiscussion Form"></span>
                   </button>
                   <button *ngIf="!meeting.generatedExcel" type="button" class="btn btn-default btn-lg" (click)="generateExcel(meeting.meetingId)">
-                      <span class="glyphicon glyphicon-import" aria-hidden="true" data-toggle="tooltip" title="Click to generate Excelsheet"></span>
+                      <span class="glyphicon glyphicon-import glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to generate Excelsheet"></span>
                   </button>
                   <button *ngIf="meeting.generatedExcel" type="button" class="btn btn-default btn-lg" (click)="downloadExcel(meeting.meetingTitle)">
-                      <span class="glyphicon glyphicon-download-alt" aria-hidden="true" data-toggle="tooltip" title="Click to Download"></span>
+                      <span class="glyphicon glyphicon-download-alt glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Download"></span>
                   </button>
                   <button type="button" class="btn btn-default btn-lg" (click)="moreDetails(meeting.meetingId)">
-                      <span class="glyphicon glyphicon-open-file" aria-hidden="true" data-toggle="tooltip" title="Click for Details"></span>
+                      <span class="glyphicon glyphicon-expand glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click for Details"></span>
                   </button>
-                  <input class="deleteCheckbox" type="checkbox" value="{{meeting.meetingId}}">
+                  <input  class="deleteCheckbox" type="checkbox" value="{{meeting.meetingId}}">
                 </td>
               </tr>
             </tbody>
