--- a/src/app/moreDetails/moreDetails.component.css
+++ b/src/app/moreDetails/moreDetails.component.css
@@ -1,9 +1,12 @@
 .moreDetails {
-  width: 100% !important;
-  margin-top: 55px;
+  width: 100% ;
 }
 .tableSection {
-  margin: 20px 10px;
+  margin-top: 40px;
+}
+.primaryDetails {
+  float: left;
+  margin: 0px 10px;
 }
 .secondaryDetails {
   margin-top: 10px;
@@ -12,5 +15,8 @@
   width: 50%;
   float: left;
   overflow-y: scroll;
-  height: 510px;
+  height: 540px;
+}
+.links {
+  float: left;
 }
