--- a/src/app/moreDetails/moreDetails.component.html
+++ b/src/app/moreDetails/moreDetails.component.html
@@ -5,22 +5,22 @@
         <table class="table table-hover table table-striped primaryDetailsTable">
           <thead>
             <tr>
-              <th class="col-md-1">
+              <th class="col-md-1 meetingId">
                 <span>MeetingId</span>
               </th>
-              <th class="col-md-2">
+              <th class="col-md-2 meeting">
                 <span>Meeting</span>
               </th>
-              <th class="col-md-2">
+              <th class="col-md-2 purpose">
                 <span>Purpose</span>
               </th>
-              <th class="col-md-2">
+              <th class="col-md-2 agenda">
                 <span>Agenda</span>
               </th>
-              <th class="col-md-3">
+              <th class="col-md-3 attendees">
                 <span>Attendees</span>
               </th>
-              <th class="col-md-2">
+              <th class="col-md-2 date">
                 <span>Date</span>
               </th>
             </tr>
@@ -60,19 +60,19 @@
               <table class="table table-bordered table-hover">
                 <thead>
                   <tr>
-                    <th class="col-md-2">
+                    <th class="col-md-2 discussionBy">
                       <span>Discussion By</span>
                     </th>
-                    <th class="col-md-2">
+                    <th class="col-md-2 discussionType">
                       <span>Discussion Type</span>
                     </th>
-                    <th class="col-md-4">
+                    <th class="col-md-4 discussion">
                       <span>Discussion</span>
                     </th>
-                    <th class="col-md-2">
+                    <th class="col-md-2 decisionBy">
                       <span>Decision By</span>
                     </th>
-                    <th class="col-md-2">
+                    <th class="col-md-2 decision">
                       <span>Decision</span>
                     </th>
                   </tr>
@@ -110,22 +110,22 @@
               <table class="table table-bordered table-hover">
                 <thead>
                   <tr>
-                    <th class="col-md-4">
+                    <th class="col-md-4 actionDesc">
                       <span>Action Description</span>
                     </th>
-                    <th class="col-md-1">
+                    <th class="col-md-1 responsible">
                       <span>Responsible</span>
                     </th>
-                    <th class="col-md-2">
+                    <th class="col-md-2 open">
                       <span>Open Since</span>
                     </th>
-                    <th class="col-md-2">
+                    <th class="col-md-2 expected">
                       <span>Expected Completion</span>
                     </th>
-                    <th class="col-md-2">
+                    <th class="col-md-2 actual">
                       <span>Actual Completion</span>
                     </th>
-                    <th class="col-md-1">
+                    <th class="col-md-1 statusAction">
                       <span>Status</span>
                     </th>
                   </tr>
