--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -24,6 +24,7 @@ footer {
   /*background-color: #F7F7F7;*/
   height: 499px;
 }
+
 .tableForm {
   width: 100% !important;
   height: 450px;
@@ -35,24 +36,65 @@ footer {
   font-size: 20px;
   margin-right: 5px;
 }
+
 .btn-lg {
   font-size: 15px;
 }
+
 .glyphiconIcon {
   font-size: 20px;
 }
+
 #check {
   float: right;
 }
-input[type="checkbox"]{
-transform: scale(2);
-margin: 15px 15px;
-float: right;
+
+input[type="checkbox"] {
+  transform: scale(2);
+  margin: 15px 15px;
+  float: right;
 }
+
 table {
   table-layout: fixed;
   width: 100%;
+  text-align: center;
 }
-.td {
+
+table th {
+  text-align: center;
+}
+
+table td {
   overflow: auto;
+  white-space: nowrap;
+  //text-overflow: ellipsis;
+}
+
+.meeting {
+  width: 10%;
+}
+
+.agenda {
+  width: 20%;
+}
+
+.attendees {
+  width: 20%;
+}
+
+.status {
+  width: 10%;
+}
+
+.date {
+  width: 10%;
+}
+
+.icons {
+  width: 30%;
+}
+.floatPosition{
+  float: right;
+  margin-right: 5px;
 }
