--- a/src/app/meetingList/meetingList.component.html
+++ b/src/app/meetingList/meetingList.component.html
@@ -11,22 +11,22 @@
           <table class="table table-bordered table-hover">
             <thead>
               <tr>
-                <th class="col-md-2">
+                <th class="col-md-2 meeting">
                   <span>Meeting</span>
                 </th>
-                <th class="col-md-2">
+                <th class="col-md-2 agenda">
                   <span>Agenda</span>
                 </th>
-                <th class="col-md-2">
+                <th class="col-md-2 attendees">
                   <span>Attendees</span>
                 </th>
-                <th class="col-md-1">
+                <th class="col-md-1 status">
                   <span>Status</span>
                 </th>
-                <th class="col-md-2">
+                <th class="col-md-2 date">
                   <span>Date</span>
                 </th>
-                <th class="col-md-3">
+                <th class="col-md-3 icons">
                   <span>
                     <button type="button" id="check" value="Check All Rows" class="btn btn-default btn-lg" (click)="checkAll()">
                       <span class="glyphicon glyphicon-check glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Select/Deselect All Rows"></span>
@@ -57,19 +57,20 @@
                   {{meeting.meetingDate}}
                 </td>
                 <td class="col-md-3">
-                  <button *ngIf="meeting.status == 'Open'" type="button" class="btn btn-default btn-lg addButton" (click)="openActionDiscussionForm(meeting.meetingId)">
-                      <span class="glyphicon glyphicon-edit glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Open ActionDiscussion Form"></span>
-                  </button>
-                  <button *ngIf="!meeting.generatedExcel" type="button" class="btn btn-default btn-lg" (click)="generateExcel(meeting.meetingId)">
-                      <span class="glyphicon glyphicon-import glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to generate Excelsheet"></span>
-                  </button>
-                  <button *ngIf="meeting.generatedExcel" type="button" class="btn btn-default btn-lg" (click)="downloadExcel(meeting.meetingTitle)">
-                      <span class="glyphicon glyphicon-download-alt glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Download"></span>
-                  </button>
-                  <button type="button" class="btn btn-default btn-lg" (click)="moreDetails(meeting.meetingId)">
+                  <input  class="deleteCheckbox" type="checkbox" value="{{meeting.meetingId}}">
+                  <button type="button" class="btn btn-default btn-lg floatPosition" (click)="moreDetails(meeting.meetingId)">
                       <span class="glyphicon glyphicon-expand glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click for Details"></span>
                   </button>
-                  <input  class="deleteCheckbox" type="checkbox" value="{{meeting.meetingId}}">
+                  <button *ngIf="meeting.generatedExcel" type="button" class="btn btn-default btn-lg floatPosition" (click)="downloadExcel(meeting.meetingTitle)">
+                      <span class="glyphicon glyphicon-download-alt glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Download"></span>
+                  </button>
+                  <button *ngIf="!meeting.generatedExcel" type="button" class="btn btn-default btn-lg floatPosition" (click)="generateExcel(meeting.meetingId)">
+                      <span class="glyphicon glyphicon-import glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to generate Excelsheet"></span>
+                  </button>
+
+                  <button *ngIf="meeting.status == 'Open'" type="button" class="btn btn-default btn-lg addButton floatPosition" (click)="openActionDiscussionForm(meeting.meetingId)">
+                      <span class="glyphicon glyphicon-edit glyphiconIcon" aria-hidden="true" data-toggle="tooltip" title="Click to Open ActionDiscussion Form"></span>
+                  </button>
                 </td>
               </tr>
             </tbody>
