--- a/src/app/moreDetails/moreDetails.component.css
+++ b/src/app/moreDetails/moreDetails.component.css
@@ -20,3 +20,49 @@
 .links {
   float: left;
 }
+
+table {
+  table-layout: fixed;
+  width: 100%;
+  text-align: center;
+}
+
+table th {
+  text-align: center;
+}
+
+table td {
+  overflow: auto;
+  white-space: nowrap;
+  //text-overflow: ellipsis;
+}
+.meetingId, .date, .meeting {
+  width: 10%;
+}
+
+.purpose, .agenda, .discussionType, .discussionBy, .discussion, .decisionBy, .decision  {
+  width: 20%;
+}
+
+.attendees {
+  width: 30%;
+}
+
+.actionDesc {
+  width: 20%;
+}
+.responsible {
+  width: 20%;
+}
+.open {
+  width: 10%;
+}
+.expected {
+  width: 20%;
+}
+.actual {
+  width: 20%;
+}
+.statusAction {
+  width: 10%;
+}
