--- a/src/app/actionDiscussion/actionDiscussion.component.css
+++ b/src/app/actionDiscussion/actionDiscussion.component.css
@@ -75,7 +75,7 @@
   color: #fff;
   text-shadow: 0 1px rgba(0, 0, 0, 0.1);
   background-color: #4d90fe;
-  //padding: 10px 0px;
+  padding: 10px 0px;
   font-family: roboto;
   font-size: 14px;
   margin-left: 2px;
