--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,8 @@
 footer {
+  position: absolute;
   bottom: 0px;
   margin: 0px auto;
+  width:100%;
   border-bottom: 1px solid black;
   border-left: 1px solid black;
   border-right: 1px solid black;
@@ -9,19 +11,15 @@ footer {
 }
 header {
   height: 70px;
-  /*border: 1px solid black;*/
-  /*background-color: #F7F7F7;*/
 }
 #beforeHeader {
   height: 50px;
+  padding-left: 10px;
   background-color: rgba(36, 62, 77, 1);
 }
 #usernameDisplay {
   color: white;
   margin: 10px 10px;
-}
-img {
-  height: 68px;
 }
 .menu>img {
   height: 30px;
@@ -57,9 +55,12 @@ img {
 .links {
   background-color: rgba(36, 62, 77, 1);
   margin: 0px;
-  //height: 49px;
-  width: 50%;
+  width: 40%;
+  height: 51px;
 }
-.navbar {
-  min-height: 50px;
+.navbar-default .navbar-nav>li>a {
+    color: #f5f5f5;
+}
+.navbar-default .navbar-nav>li>a:hover{
+    color: #00ace6;
 }
