--- a/src/app/meetingList/meetingList.component.css
+++ b/src/app/meetingList/meetingList.component.css
@@ -1,5 +1,5 @@
 .createButton {
-  float: right;
+  float: left;
 }
 
 footer {
@@ -16,18 +16,20 @@ footer {
   width: 100% !important;
   margin: 0 auto;
   border-radius: 2px;
-  height: 450px;
+  height: 850px;
+
 }
 
 .meetingListModal {
   width: 100% !important;
   /*background-color: #F7F7F7;*/
-  height: 499px;
+  height: 850px;
+
 }
 
 .tableForm {
   width: 100% !important;
-  height: 450px;
+  height: 800px;
   overflow: auto;
 }
 
@@ -38,11 +40,11 @@ footer {
 }
 
 .btn-lg {
-  font-size: 15px;
+  font-size: 10px;
 }
 
 .glyphiconIcon {
-  font-size: 20px;
+  font-size: 15px;
 }
 
 #check {
